# pirate-audio

./: pyproject.toml
build your own/: display_scrolling-text.py  display_shapes.py
clip-recorder/: cliprecord.py
